log
Wed 24 Apr 2024 09:36:25 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
167965d
Wed 24 Apr 2024 09:43:19 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
71b3ab3
Wed 24 Apr 2024 09:49:44 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:10: error: unused variable ‘buckets’ [-Werror=unused-variable]
   61 |   Pair** buckets = (Pair **) calloc(sizeof(Pair), capacity);  //inicializar cada espacio del la tabla.
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bec1dcc
Wed 24 Apr 2024 09:50:28 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
57536a6
Wed 24 Apr 2024 09:55:42 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b3c80a7
Wed 24 Apr 2024 09:56:43 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2b74aaf
Wed 24 Apr 2024 10:01:10 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  1|5
total_score: 10/70
e594e67
Wed 24 Apr 2024 10:07:47 PM UTC: 
 hashmap.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:94:3: error: ‘fo’ undeclared (first use in this function)
   94 |   fo
      |   ^~
hashmap.c:94:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:94:5: error: expected ‘;’ before ‘return’
   94 |   fo
      |     ^
      |     ;
   95 | 
   96 |     return NULL;
      |     ~~~~~~
hashmap.c:92:7: error: unused variable ‘indice’ [-Werror=unused-variable]
   92 |   int indice = hash(key, map -> capacity);
      |       ^~~~~~
hashmap.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b4430b4
Wed 24 Apr 2024 10:08:00 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8653b39
Wed 24 Apr 2024 10:08:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
22cc766
Wed 24 Apr 2024 10:09:49 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7945f9c
Wed 24 Apr 2024 10:11:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5a28484
Wed 24 Apr 2024 10:11:49 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
d7e727a
Wed 24 Apr 2024 10:13:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8d8a2c5
Wed 24 Apr 2024 10:13:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4884b02
Wed 24 Apr 2024 10:18:52 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
101fa5b
Wed 24 Apr 2024 10:19:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c102b25
Wed 24 Apr 2024 10:20:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f9d4217
Wed 24 Apr 2024 10:20:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e461a81
Thu 25 Apr 2024 09:41:59 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:71: error: comparison between pointer and integer [-Werror]
   45 |   if (map -> buckets[indice] == NULL || map -> buckets[indice] -> key == -1)
      |                                                                       ^~
cc1: all warnings being treated as errors
Compilation failed
261cdd0
Thu 25 Apr 2024 09:42:26 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
bb3cbab
Thu 25 Apr 2024 09:47:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
8965636
Thu 25 Apr 2024 09:47:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
6093398
Thu 25 Apr 2024 10:03:31 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
3e2ce5b
Thu 25 Apr 2024 10:04:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:59:65: error: ‘newIndice’ undeclared (first use in this function); did you mean ‘nuevoIndice’?
   59 |       if (map -> buckets[nuevoIndice] == NULL || map -> buckets[newIndice] -> key == NULL)
      |                                                                 ^~~~~~~~~
      |                                                                 nuevoIndice
hashmap.c:59:65: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
dffb55a
Thu 25 Apr 2024 10:04:53 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
b0b988d
Thu 25 Apr 2024 10:05:17 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
88d5a99
Thu 25 Apr 2024 10:05:36 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 10/70
fd5019e
Thu 25 Apr 2024 10:11:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
963f3a5
